--- a/src/AppBundle/Resources/views/TipoDocumentoExpediente/edit.html.twig
+++ b/src/AppBundle/Resources/views/TipoDocumentoExpediente/edit.html.twig
@@ -9,7 +9,7 @@
     <div class="col-md-12">
         <div class="box box-primary">
             <div class="box-header with-border">
-                <h3 class="box-title">TipoDocumentoExpediente</h3>
+                <h3 class="box-title">Tipo Documento Expediente</h3>
             </div>
 
     {{ form(edit_form) }}
@@ -23,6 +23,6 @@
 </div>
 </div>
 </div>
-    {{ form(delete_form) }}
+{#    {{ form(delete_form) }}#}
 
 {% endblock %}
