--- a/src/AppBundle/Resources/views/TipoDocumentoExpediente/index.html.twig
+++ b/src/AppBundle/Resources/views/TipoDocumentoExpediente/index.html.twig
@@ -11,7 +11,7 @@
         <div class="col-xs-12">
             <div class="box">
                 <div class="box-header">
-                    <h3 class="box-title">Listado TipoDocumentoExpediente</h3>
+                    <h3 class="box-title">Listado Tipos Documento Expediente</h3>
 
 
                 </div>
