--- a/src/AppBundle/Resources/views/TipoDocumentoExpediente/show.html.twig
+++ b/src/AppBundle/Resources/views/TipoDocumentoExpediente/show.html.twig
@@ -9,7 +9,7 @@
     <div class="col-md-6">
         <div class="box box-primary">
             <div class="box-header with-border">
-                <h3 class="box-title">TipoDocumentoExpediente</h3>
+                <h3 class="box-title">Tipo Documento Expediente</h3>
             </div>
             <div class="box-body">
                 <table class="record_properties">
@@ -49,7 +49,7 @@
 </div>
 </div>
 </div>
-    {{ form(delete_form) }}
+{#    {{ form(delete_form) }}#}
 
 
 {% endblock %}
